force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Description__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>