force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Featured__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>