force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Updated_At__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Updated_At__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>